--- a/index.html
+++ b/index.html
@@ -66,14 +66,13 @@
             transform: rotate(90deg);
         }
 
-        /* [5] MENU LATERAL - VERSÃO CORRIGIDA */
+        /* [5] MENU LATERAL - VERSÃO AJUSTADA */
         .menu-lateral {
             position: fixed;
-            top: 60px;
+            top: 100px; /* Aumentado de 60px para 100px */
             right: -250px;
             width: 200px;
-            height: auto;
-            max-height: calc(100vh - 120px);
+            max-height: calc(100vh - 150px);
             background: white;
             box-shadow: -2px 0 10px rgba(0,0,0,0.1);
             transition: right 0.3s ease;
